--- a/_posts/2019-12-28-2019Summary.md
+++ b/_posts/2019-12-28-2019Summary.md
@@ -46,7 +46,7 @@ description: 2019 年总结
 
 每年都会立 flag，常常贪心立了好多个，但年年都倒。随着年龄增长，愈发觉得时间不够用，只够好好完成一两件事。那就在 2020 年只立一个 flag——专注创作。莫名觉得自己能坚持，哈哈，等待明年此时见分晓！
 
-别人的年终总结：[世界观，沟通和烟火气](https://mp.weixin.qq.com/s/5xTcRd7na3QRLqyahTrQ0g)、[2019，matters | 我的年度問卷 - Matters](https://matters.news/@hi176/2019-matters-%E6%88%91%E7%9A%84%E5%B9%B4%E5%BA%A6%E5%95%8F%E5%8D%B7-zdpuAsfEiEzT54ndUu2tZEosrD8wAy8TSfwWfjoucowAamSXD)
+别人的年终总结：[世界观，沟通和烟火气](https://mp.weixin.qq.com/s/5xTcRd7na3QRLqyahTrQ0g)、[2019，matters 我的年度問卷 - Matters](https://matters.news/@hi176/2019-matters-%E6%88%91%E7%9A%84%E5%B9%B4%E5%BA%A6%E5%95%8F%E5%8D%B7-zdpuAsfEiEzT54ndUu2tZEosrD8wAy8TSfwWfjoucowAamSXD)
 
 ChangeLog
 
